--- a/dom/CMakeLists.txt
+++ b/dom/CMakeLists.txt
@@ -37,6 +37,7 @@ if(COLLADA_DOM__LEGACY_LIBXML2)
 		try_external_libs(xml2 libxml2/cmake LIBXML2)	
 		if(LIBXML2_INCLUDE_DIRS)
 			string(APPEND LIBXML2_INCLUDE_DIRS "/../trunk/include")
+			list(INSERT LIBXML2_LIBRARIES 0 PRIVATE)
 		endif()
 	endif()
 endif()
